--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h2>Legendary Card Randomizer</h2>
+    <div class="heroSection">
+        <h3>Hero:</h3>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
