--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 </head>
 <body>
     <h2>Legendary Card Randomizer</h2>
-    <div class="heroSection">
-        <h3>Hero:</h3>
-    </div>
+    <h3>Heroes:</h3>
+    <div class="heroSection"></div>
     <script src="./app.js"></script>
 </body>
 </html>
