--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <h2>Legendary Card Randomizer</h2>
+    <label for="hero-amt">How Many Heroes?</label>
+    <input id='hero-amt' type="text">
     <h3>Heroes:</h3>
-    <div class="heroSection"></div>
+    <div class="hero-section"></div>
     <script src="./app.js"></script>
 </body>
 </html>
