--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <h2>Legendary Card Randomizer</h2>
-    <label for="hero-amt">How Many Heroes?</label>
-    <input id='hero-amt' type="text">
-    <h3>Heroes:</h3>
-    <div class="hero-section"></div>
+    <div id='content'>
+        <label for="hero-amt">How Many Heroes?</label>
+        <input id='hero-amt' type="text">
+        <button id='start-button'>Assemble!</button>
+    </div>
     <script src="./app.js"></script>
 </body>
 </html>
