--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <option value="4">4</option>
             <option value="5">5</option>
         </select>
-        <button id='start-button'>Assemble!</button>
+        <button id="start-button">Assemble!</button>
     </div>
     <script src="./app.js"></script>
 </body>
