check box event listener

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <option value="5">5</option>
             </select>
         </div>
-        <div class="collection">
+        <div class="collections">
             <p>Which Collections?</p>
-            <input type="checkbox" id="core" name="core" value="core">
-            <label for="collection">Core Set</label>
-            <input type="checkbox" id="dark-city" name="dark-city" value="dark-city">
-            <label for="collection">Dark City</label>
+            <input type="checkbox" id="core" name="collection" value="core">
+            <label for="core">Core Set</label>
+            <input type="checkbox" id="dark-city" name="collection" value="dark-city">
+            <label for="dark-city">Dark City</label>
         </div>
 
         <button id="start-button">Assemble!</button>
