--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         <button id="start-button">Assemble!</button>
     </div>
-    <script src="./app.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/cardData.js "></script>
 </body>
 </html>
